[tool.poetry]
name = "metaphor"
version = "0.1.0"
description = ""
authors = ["spourdei <spourdei@uwaterloo.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.28.1"
metaphor-python = "^0.1.16"
load-dotenv = "^0.1.0"
beautifulsoup4 = "^4.12.2"
sentence-transformers = "^2.2.2"
black = "^23.9.1"
pydantic = "^2.4.2"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
